修改swagger api 路徑顯示錯誤的問題
